--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -28,15 +28,22 @@
             background-color: #4CAF50;
             color: white;
         }
-  body {
+   body{
+      background: url("https://images.unsplash.com/photo-1616512659455-111d3367649f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8c2Nob29sJTIwYnVpbGRpbmd8ZW58MHx8MHx8fDA%3D&w=1000&q=80");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+       height: 100%;
 
-  background-color: skyblue;
-
-  }
+        font-weight: bold;
+        font-family: poppins;
+      }
 
   h1 {
+    color:Green;
+    font-size:100px;
 
-  font-size:100px;
+
 
   }
 
@@ -45,8 +52,8 @@
 <body>
 <div class="navbar">
     <a th:href="@{/}" class="active">Home</a>
-    <a th:href="@{/schools/new}"> Admin Page </a>
-    <a th:href="@{/signup}">Parent page </a>
+    <a th:href="@{/schools/new}"> Admin Portal </a>
+    <a th:href="@{/signup}"> Find School as Parent  </a>
 </div>
 
 <h1>Welcome to Primary And Nursary School Solution Application </h1>
