--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -44,15 +44,20 @@
         .login-container input[type="submit"]:hover {
             background-color: #45a049;
         }
+          body{
+
+        background-color: skyblue;
+        }
     </style>
 </head>
 <body>
 <div class="login-container">
-    <h2> Log In </h2>
-    <form action="/login" method="post">
-        <input type="text" name="email" placeholder="email" required="required" />
-        <input type="password" name="password" placeholder="Password" required="required" />
-        <input type="submit" value="Log In  " />
+    <h2> Sign UP </h2>
+    <form action="/signup" method="post" th:object="${user}">
+        <input type="hidden" name="role" th:fields="*{role}" th:value="USER"/> <br>
+        <input type="text" name="email" th:fields="*{email}" placeholder="email" required="required" />
+        <input type="password" name="password" th:fields="*{password}" placeholder="Password" required="required" />
+        <input type="submit" value="Sign Up " />
     </form>
 </div>
 </body>
